--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "script":"node app.js"
   },
   "author": "",
   "license": "ISC",
